# Apagnan

./: .gitignore  Apagnan  CMakeLists.txt  Makefile  README.md
headers/: server.hpp
headers/logger/: logger.hpp
headers/middleware/: middleware.hpp  validation.hpp
headers/server/: request.hpp  server.hpp
headers/tools/: concat.hpp
sources/: main.cpp  server.cpp
sources/logger/: logger.cpp
sources/middleware/: validation.cpp
sources/server/: request.cpp  server.cpp
sources/tools/: concat.cpp
